--- a/style.css
+++ b/style.css
@@ -134,6 +134,60 @@ table {
 /* === */
 /* === */
 
+#loader {
+  position: fixed;
+  inset:0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 99999;
+}
+
+.loader__counter {
+  color: #ffffff;
+}
+
+.loader__overlay {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: stretch;
+}
+
+.loader__counter {
+  position: fixed;
+  width: calc(100% - 4rem);
+  height: calc(100% - 2rem);
+  z-index: 99999;
+  display: flex;
+  justify-content: end;
+  align-items: end;
+  font-family: sans-serif;
+  font-weight: 700;
+  padding: 2rem 1rem;
+}
+
+.counter__percent {
+  position: relative;
+  font-size: 10rem;
+}
+
+.counter__percent::after {
+  content: '%';
+  position: absolute;
+  right: -2rem;
+  bottom: 1rem;
+  font-size: 2.5rem;
+}
+
+.loader__bar {
+  width: 100%;
+  height: 100%;
+  background-color: #040048;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 body {
   width: 100vw;
   height: 100%;
